# playgroundC

./: .gitignore  CMakeLists.txt  README.md
include/: hello.h  menu_item.h
src/: hello.c  main.c  menu_item.c
tests/: test_hello.c
